--- a/Chess/chess.html
+++ b/Chess/chess.html
@@ -14,7 +14,12 @@
         <button class ="btn-start" onclick="comienzaJuego()">Comenzar a Jugar</button>
     </div>
     <div class="container">
-        <div class="board" id= "board">
+        <div class="player2" id = "player2">
+            <h3 >Player 2</h3>
+        </div>
+        <div class="board" id= "board"></div>
+        <div class="player1" id = "player1">
+            <h3 >Player 1</h3>
         </div>
     </div>
     <script src="./models/pieces.js"></script>
